<resources>
    <string name="app_name">T3 TextView and ScrollView</string>
    <string name="first">1 Shree Somnath Jyotirlinga Temple Somnath Jyotirlinga Temple is the first
        of the Jyotirlinga temples located in Veraval, Gujarat. Chandra Dev built this temple with gold at first. This temple is at the sacred meeting of the Hirana, Kapila and Saraswati rivers. Chandra Dev meditated and prayed here for thousands of years. After that, he received a boon from Mahadev. A large number of devotees visit Somnath temple mostly in Shravan month and on Mahashivratri. The temple is destroyed 16 times and rebuilt again. Devotees even perform Puja at old Somnath Temple to take a blessing from Lord Shiva.</string>
    <string name="second">
Sri Bhramaramba Mallikarjuna Jyotirling Temple in Srisailam is unique and of great significance. Here Jyotirling and Shakti Peeth are on the same site. Mallikarjuna is Lord Shiva’s name and Bhramaramba is Parvati Mata’s name. The temple is like a fort near the Krishna River also called Patalganga. </string>
    <string name="third"> Mahakaleshwar Jyotirlinga Temple in Ujjain is on the banks of the Shipra River. The Shivling here is ‘Swayambhu’ (Self Appeared). The temple has a south-facing idol of Mahakaleshwar. Which is unique among the Jyotirlingas. Ujjain also has a Shaktipeeth temple of Harsiddhi Mata adding to Ujjain’s significance. Devotees mostly attend puja at Ujjain for emotion expressing faith and devotion towards Lord Shiva.</string>
    <string name="four"> Omkareshwar Jyotirlinga Temple is on an island called Mandhata in the Narmada River. Narmada Mata is very dear to Lord Shiva. He is present in every pebble of the Narmada River. King Mandhata of the Ikshvaku dynasty and a descendant of Lord Rama prayed to Mahadev here. Mahadev appeared to bless him. Devotees even perform Puja to take a blessing from Lord Shiva.</string>
    <string name="five">Rameshwaram Jyotirlinga Temple is in Rameshwaram and is the southernmost of the Jyotirlingas. Here, Lord Rama himself made a Parthiv Shivling and worshipped it before going to Lanka. In the temple, there are two Shivlings. The one made by Sri Ram and the other that was brought from the Himalayas by Hanumanji. There are 22 sacred Kunds within the temple, one for each arrow in Sri Ram’s quiver. </string>
    <string name="six"> Bhimashankar Jyotirlinga Temple is in the Sahyadri ranges, Maharashtra. This temple is within a reserved forest. This is also where the Bhima River originates. An extremely revered religious site, Sant Dnyaneshwar is worshipped here. Bhimashankar Jyotirlinga is one of the most ancient temples. Devotees mostly attend puja at Bhimashankar for emotion expressing faith and devotion towards Lord Shiva.

</string>
    <string name="seven">Kashi Vishwanath Jyotirlinga temple stands on the banks of the Ganga River in Varanasi. And is of the greatest significance. Kashi is a timeless spiritual destination known as the bestower of ‘Moksha’. Adi Shankaracharya, Paramhans Ramakrishna, Swami Vivekananda and Guru Nanak have all visited this temple. After writing the Ramayana, Goswami Tulsidasji first placed it here at the temple.

 </string>
    <string name="eight">Trimbakeshwar Jyotirlinga temple is on the banks of the holy Godavari river. Trimbak was the original site of the Kumbh Mela which was later shifted to Nashik, Maharashtra. This Jyotirlinga temple is unique because of its three-faced Linga. Which represents Brahma, Vishnu and Mahesh (Rudra). The Pandavas gave the three crowns to the Lingas here.

 </string>
    <string name="nine">Grishneshwar Jyotirling temple is the smallest of the Jyotirling temples in size. But not in importance. Its location is 1 km from the Ellora caves in Aurangabad, Maharashtra tells about its significance as a pilgrimage. The Shivling faces east, and within the temple are figures of the 10 Avatars of Lord Vishnu in red stone. A five-tiered Shikhara testifies to the temple’s timelessness. </string>
    <string name="ten">Baidyanath Jyotirlinga temple is a highly revered pilgrimage in Jharkhand. This site is disputed by some. So, Adi Shankaracharya has indicated this location in one of his verses. This is the place where Ravana cut and offered his ten heads to Lord Shiva. Mahadev, pleased with his devotion appeared as ‘Vaidya’. And rejoined the heads and blessed him. Hence, the name is Baidyanath. In Shravan month, the temple overflows with ‘Kanwariyas’ who offer Ganga-Jal to the Lord.

 </string>
    <string name="eleven">Kedarnath Jyotirling in Kedarnath is the highest of the Jyotirlingas. It is near the Mandakini River. The first of the Panch-Kedar, the temple as a pilgrimage goes back to the Mahabharata era. Where the Pandavas built this temple at first as per Skanda Purana. The highest of rewards is doing Puja or Darshan here.

 </string>
    <string name="twelve">Nageshwar Mahadev Jyotirlinga Temple is near Dwarka, Gujarat. It is a highly revered Jyotirling. Shiv-Purana mentioned this temple. Mahadev appeared to bless a devotee and protect him from demons. An ancient pilgrimage for centuries, Jyotirlinga is in a chamber below ground level. A 25-meter tall statue of Lord Shiva in Padmasana is on the temple premises. Devotees can even perform puja at the temple. </string>


</resources>