<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"

                android:src="@drawable/name12"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.Shree Somnath Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/somnath1"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Sri Bhramaramba Mallikarjuna Jyotirling Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mallikarjuna2"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. Ujjain Mahakaleshwar Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mahakaleshwar3"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4. Omkareshwar Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/omkareshwar4"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5. Ramanathaswamy Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rameshwaram5"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6. Bhimashankar Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bhimashankar6"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7. Kashi Vishwanath Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/kashi_vishwanath7"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8. Trimbakeshwar Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/trimbakeshwar8"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9. Grishneshwar Mahadev Jyotirling Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/grishneshwar9"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10. Baidyanath Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baidyanath_dham_jyotirlinnga10"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11. Kedarnath Jyotirlinga Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/kedarnath11"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eleven"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12. Dwarka Nageshwar Mahadev Jyotirling Temple"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/nageshwar12"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twelve"
                />




        </LinearLayout>
    </ScrollView>

</LinearLayout>